fix: change parent overflow in popap

--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -12,3 +12,10 @@
 .popup__close:hover {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 640px) {
+  .popup__close {
+    top: -56px;
+    right: 0;
+  }
+}
