--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -12,3 +12,28 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 640px) {
+  .popup__container {
+    max-width: 380px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .popup__container {
+    max-width: 340px;
+    padding: 25px 22px;
+  }
+}
+
+@media screen and (max-width: 382px) {
+  .popup__container {
+    max-width: 310px;
+  }
+}
+
+@media screen and (max-width: 352px) {
+  .popup__container {
+    max-width: 282px;
+  }
+}
