--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,9 @@
   line-height: 29px;
   margin-bottom: 54px;
 }
+
+@media screen and (max-width: 424px) {
+  .popup__title {
+    margin-bottom: 75px;
+  }
+}
