--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,13 +5,6 @@
   font-weight: 500;
   line-height: 48px;
   margin-right: 18px;
-  margin-bottom: 16px;
-}
-
-@media screen and (max-width: 760px) {
-  .profile__name {
-    margin-bottom: 14px;
-  }
 }
 
 @media screen and (max-width: 400px) {
