--- a/blocks/profile/__row/profile__row.css
+++ b/blocks/profile/__row/profile__row.css
@@ -1,4 +1,11 @@
 .profile__row {
   display: flex;
   align-items: center;
+  margin-bottom: 16px;
+}
+
+@media screen and (max-width: 760px) {
+  .profile__row {
+    margin-bottom: 14px;
+  }
 }
